--- a/post-hub/public/index.html
+++ b/post-hub/public/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="apple-touch-icon" href="static/logo.jpg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Nick</title>
+    <title>Post Hub</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
