--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       content="This project is done for educational purposes, Web site created using create-react-app"
     />
     <link href="https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0&icon_names=favorite,comment" />
     <link rel="apple-touch-icon" href="static/logo.jpg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Post Hub</title>
